data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1548.wast
;; 9. **Test Description**: Design a test where `br_if` instruction operates inside a loop with a continuous `i32` decrementing counter to check its behavior when it turns zero.    - **Constraint Checked**: Proper handling of counter conditions.    - **Relation to Infinite Loops**: If the `br_if` does not properly break out when `i32` reaches zero, the loop will keep executing indefinitely.

(assert_invalid
  (module
    (func
      (block
        (loop
          (br_if 1 (i32.eqz (i32.const 0)))
        )
      )
    )
  )
  "infinite loop likely due to improper br_if handling"
)